Added More Exercises to Database